Added gifs & fixed some minor logic errors

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
 		<div class="col-4">
 			<h3 id="timesUp">Ran out of Time: </h3>
 		</div>
-
+	</div>
+	<!-- Gifs for correct/wrong -->
+	<div class="row" id="gif">
 	</div>
 </div>
 
